Fix photos spacing, add Tahoe/LA photos

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -3,5 +3,5 @@
 }
 
 .app-container {
-  margin-bottom: 80px;
+  margin-bottom: 45px;
 }
