--- a/src/app/components/collections/Collection.css
+++ b/src/app/components/collections/Collection.css
@@ -1,3 +1,4 @@
-.photos-container{
+.photos-container {
   padding-top: 30px;
+  margin: 0 auto;
 }
